objects/bofc__BOFCBulkLeadConversion__c.object
<CustomObject>
    <fields>
        <fullName>bofc__Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>BOFCBulkLeadConversions</relationshipLabel>
        <relationshipName>BOFCBulkLeadConversions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bofc__Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>BOFCBulkLeadConversions</relationshipLabel>
        <relationshipName>BOFCBulkLeadConversions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bofc__Do_you_want_to_create_new_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do you want to create new Account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bofc__Do_you_want_to_create_new_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do you want to create new Contact?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bofc__Do_you_want_to_create_new_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do you want to create new Opportunity?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bofc__Is_lead_converted__c</fullName>
        <formula>bofc__Lead__r.IsConverted</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is lead converted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bofc__LeadConvertedMessage__c</fullName>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>bofc__LeadStatus__c</fullName>
        <label>Conversion Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Lead_Company_Name__c</fullName>
        <formula>bofc__Lead__r.Company</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Lead_Name__c</fullName>
        <formula>bofc__Lead__r.FirstName &amp; &quot; &quot; &amp;  bofc__Lead__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>BOFCBulkLeadConversions</relationshipLabel>
        <relationshipName>BOFCBulkLeadConversions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bofc__Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>BOFCBulkLeadConversions</relationshipLabel>
        <relationshipName>BOFCBulkLeadConversions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bofc__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BOFCBulkLeadConversions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>BOFCBulkLeadConversion</label>
    <nameField>
        <displayFormat>BLC-{0000}</displayFormat>
        <label>BOFCBulkLeadConversion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BOFCBulkLeadConversions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>